--- a/index.html
+++ b/index.html
@@ -509,6 +509,9 @@
               <div class="form-group">
                 <textarea id="" cols="30" rows="7" name="message" class="form-control" placeholder="Message"></textarea>
               </div>
+	      <div class="form-group">
+                <input type='hidden' id="zc_gad" name="zc_gad" value=""/>
+              </div>
               <div class="form-group">
                 <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5 submitButton">
               </div>
