--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src='https://crm.zoho.com/crm/javascript/zcga.js'></script>
-    <script id='formScript5125743000001756003' src='https://crm.zoho.com/crm/WebFormServeServlet?rid=f7adf193f102c6c6539b2bc2e585b8410cecf5a57dabdf5ec8ebc69b9e3f21c3gidb5ded3b06052ce250e88ef68aec27bdb5d04f28a7ab63f9b4cfcdb658df7b774&script=$sYG'></script>
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 	  
@@ -497,7 +496,7 @@
 
         <div class="row no-gutters block-9">
           <div class="col-md-6 order-md-last d-flex">
-            <form action="#" class="bg-light p-4 p-md-5 contact-form" id="contact-form"> 
+            <!--form action="#" class="bg-light p-4 p-md-5 contact-form" id="contact-form"> 
               <div class="form-group">
                 <input type="text" class="form-control" name="name" placeholder="Your Name">
               </div>
@@ -516,8 +515,8 @@
               <div class="form-group">
                 <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5 submitButton">
               </div>
-            </form>
-          
+            </form-->
+           <script id='formScript5125743000001756003' src='https://crm.zoho.com/crm/WebFormServeServlet?rid=f7adf193f102c6c6539b2bc2e585b8410cecf5a57dabdf5ec8ebc69b9e3f21c3gidb5ded3b06052ce250e88ef68aec27bdb5d04f28a7ab63f9b4cfcdb658df7b774&script=$sYG'></script>
           </div>
 
           <div id="googleMap" style="width: 50%; height: 500px;">
